--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,12 @@
             <version>1.3.5</version>
         </dependency>
 
+		<!--热部署-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<optional>true</optional> <!-- 这个需要为 true 热部署才有效 -->
+		</dependency>
 	</dependencies>
 
     <build>
